<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="label_app">Area Manager</string>
    <string name="label_descricao_app">Aplicativo Android para o gerenciamento de reservas de uma área de lazer. Este projeto é o Trabalho de Conclusão de Curso (TCC) do aluno Cleber Dias.</string>
    <string name="label_versao_app">Versão %s</string>
    <string name="label_sobre">Sobre</string>
    <string name="label_descricao_sobre">Um aplicativo Android com o objetivo de gerenciar de forma simples e ágil reservas de áreas de lazer ou afins.\n\nCleber Dias e Venilton Júnior\nCopyright 2014 Liga da Zueira. Todos os direitos reservados.</string>
    <string name="label_legenda">Legenda Datas</string>
    <string name="label_disponivel">Disponível</string>
    <string name="label_reservada_paga">Reservada (Paga)</string>
    <string name="label_reservada_nao_paga">Reservada (Não Paga)</string>
    <string name="label_selecionada">Selecionada</string>
    <string name="label_incluir_reserva">Incluir Reserva</string>
    <string name="label_editar_reserva">Editar Reserva</string>
    <string name="label_forma_pagamento">Formas de Pagamento:</string>
    <string name="label_status_pagamento">Status do Pagamento:</string>
    <string name="label_confirmacao">Confirmação</string>
    <string name="label_mensagem_voltar">Realmente deseja voltar? Alterações não salvas serão perdidas.</string>
    <string name="label_mensagem_ok">Reserva salva com sucesso!</string>
    <string name="label_mensagem_exclusao">Reserva excluída com sucesso!</string>
    <string name="label_mensagem_excluir">Realmente deseja excluir esta reserva?</string>
    <string name="action_sobre">Sobre</string>
    <string name="action_gerenciar">Gerenciar</string>
    <string name="action_sair">Sair</string>
    <string name="action_incluir">Incluir</string>
    <string name="action_editar">Editar</string>
    <string name="action_excluir">Excluir</string>
    <string name="action_legendas">Legendas&#8230;</string>
    <string name="action_salvar">Salvar</string>
    <string name="action_voltar">Voltar</string>
    <string name="action_relatorios">Relatórios</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_endereco">Endereço</string>
    <string name="hint_telefone">Telefone</string>
    <string name="hint_valor">Valor</string>
    <string name="hint_tipo_evento">Tipo de Evento</string>
    <string name="hint_qtd_pessoas">Quantidade de Pessoas</string>
    <string name="radio_dinheiro">Dinheiro</string>
    <string name="radio_deposito">Depósito</string>
    <string name="radio_cheque">Cheque</string>
    <string name="radio_realizado">Realizado</string>
    <string name="radio_pendente">Pendente</string>
    <string name="erro_campo_obrigatorio">Preenchimento Obrigatório</string>
    <string name="title_activity_relatorio">RelatorioActivity</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="array_meses">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
        <string name="label_relatorio_mensal">Relatório Mesal</string>
        <string name="label_relatorio_anual">Relatório Anual</string>
        <string name="label_quantidade_de_reservas">Quantidade de Reservas: %s</string>
        <string name="label_valor_recebido">Valor Recebido: %s</string>
        <string name="label_valor_a_receber">Valor a Receber: %s</string>
        <string name="label_valor_total">Valor Total: %s</string>
    
</resources>