<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout style="@style/Form" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_manter_reserva"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View style="@style/Separator" />

        <TextView
            android:id="@+id/lblData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_cpf"
            android:inputType="number"
            android:maxLength="11" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_nome"
            android:inputType="textPersonName"
            android:maxLength="100" />

        <EditText
            android:id="@+id/txtEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_endereco"
            android:inputType="text"
            android:maxLength="100" />

        <EditText
            android:id="@+id/txtTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_telefone"
            android:inputType="phone"
            android:maxLength="100" />

        <TextView
            android:id="@+id/lblFormasPagamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/label_forma_pagamento" />

        <RadioGroup
            android:id="@+id/rdoGrpFormaPagamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rdoDinheiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_dinheiro" />

            <RadioButton
                android:id="@+id/rdoDeposito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_deposito" />

            <RadioButton
                android:id="@+id/rdoCheque"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_cheque" />
        </RadioGroup>

        <TextView
            android:id="@+id/lblStatusPagamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/label_status_pagamento" />

        <RadioGroup
            android:id="@+id/rdoGrpStatusPagamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rdoNaoPago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_pendente" />

            <RadioButton
                android:id="@+id/rdoPago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_realizado" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingTop="15dp" >

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_cancelar" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_salvar" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>