<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblTituloMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_relatorio_mensal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/cboMeses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/lblMesQtdReservas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_quantidade_de_reservas"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblMesValorRecebido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_valor_recebido"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblMesValorReceber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_valor_a_receber"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblMesValorTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_valor_total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View style="@style/Separator" />

    <TextView
        android:id="@+id/lblTituloAno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_relatorio_anual"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/cboAnos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/lblAnoQtdReservas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_quantidade_de_reservas"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblAnoValorRecebido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_valor_recebido"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblAnoValorReceber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_valor_a_receber"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblAnoValorTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_valor_total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>